helloboot-tracing/helloboot-tracing-app/src/main/kubernetes/helloboot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloboot
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /service1
        backend:
          serviceName: service1
          servicePort: 8080
      - path: /service2
        backend:
          serviceName: service2
          servicePort: 8080
      - path: /service3
        backend:
          serviceName: service3
          servicePort: 8080
      - path: /service4
        backend:
          serviceName: service4
          servicePort: 8080
      - path: /longhello
        backend:
          serviceName: service4
          servicePort: 8080
